tests/bad/slicing_pointer.glaz
fn main() {
	let x: *i32 = &0;
	_ = unsafe { x[1:5] };
}
